--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
 RewriteEngine on
 
+# SSL here
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.koocam.com/$1 [R,L]
+
 # if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
@@ -7,5 +11,13 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # otherwise forward it to index.php
 RewriteRule . index.php
 
+RewriteCond %{REQUEST_URI} /admin
+#RewriteCond %{REMOTE_ADDR} !=111.111.111.111
+RewriteRule ^.*$ /404 [R=302,L]
 
 
+# Use PHP54 as default
+#AddHandler application/x-httpd-php54 .php
+#<IfModule mod_suphp.c>
+#    suPHP_ConfigPath /opt/php54/lib
+#</IfModule>
